--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ google-generativeai
 python-dotenv
 importlib-metadata; python_version < "3.10"
 pytest
+streamlit>=1.30.0
+streamlit-ace>=0.1.1
+graphviz>=0.20.1
